Ajout des copyrights

--- a/index.html
+++ b/index.html
@@ -122,7 +122,8 @@
 				</div>
 			</div>
 		</main>
-		<footer role="contentinfo"></footer>
+		<footer>
+		</footer>
 		<script type="text/javascript" src="./js/tarteaucitron.js"></script>
 		<script type="text/javascript">
 			    var tarteaucitronForceLanguage = 'fr';
