--- a/projets.html
+++ b/projets.html
@@ -621,6 +621,9 @@
 			<div id="scrollUp">
 				<a href="./index.html/projets#" class="ontop"><img src="./image/chevron-up-solid.svg" alt="icone chevron"></a>
 			</div>
+			<div class="copy">
+				Adrien Ribeiro | 2021 | Tous droits réservés.
+			</div>
 		</footer>
 		<script type="text/javascript" src="./js/tarteaucitron.js"></script>
 		<script type="text/javascript">
