--- a/contact.html
+++ b/contact.html
@@ -79,6 +79,11 @@
 			</div>
 		</main>
 		<!-- footer -->
+		<footer>
+			<div class="copy">
+				Adrien Ribeiro | 2021 | Tous droits réservés.
+			</div>
+		</footer>
 		<script type="text/javascript" src="./js/tarteaucitron.js"></script>
 		<script type="text/javascript">
 			    var tarteaucitronForceLanguage = 'fr';
