Ajout element texte titre de page

--- a/projets.html
+++ b/projets.html
@@ -13,7 +13,7 @@
 		<meta name="robots" content="index, follow">
 		<meta name="city" content="Estaimpuis">
 		<meta name="country" content="Belgique">
-		<title>Mes Réalisations | Philippe Vandenbrande</title>
+		<title>Mes Réalisations | Philippe Vandenbrande | Menuisier & Charpentier</title>
 		<!-- Favicons -->
         <link rel="apple-touch-icon" sizes="180x180" href="./image/favicon/apple-touch-icon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="./image/favicon/favicon-32x32.png">
