--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 		<script type="text/javascript" src="./js/imagesloaded.pkgd.min.js" async></script>
 		<script type="text/javascript" src="./js/isotope.pkgd.min.js" async></script>
 		<script type="text/javascript" src="./js/front-socle.js" async></script>
-		<script type="text/javascript">
+		<script type="text/javascript" async>
 			    function fitting() {
 				 $('#home_slider').imagefit();
 				 
