--- a/contact.html
+++ b/contact.html
@@ -24,8 +24,8 @@
 		<link rel="stylesheet" href="./css/validationEngine.jquery.css" type="text/css">
 		<link rel="stylesheet" href="./css/_nivo-lightbox.css" type="text/css">
 		<link rel="stylesheet" type="text/css" href="./css/tarteaucitron.css">
-		<script type="text/javascript" id="" async="" src="./js/tarteaucitron.fr.js" async></script>
-		<script type="text/javascript" id="" async="" src="./js/tarteaucitron.services.js" async></script>
+		<script type="text/javascript" src="./js/tarteaucitron.fr.js" async></script>
+		<script type="text/javascript" src="./js/tarteaucitron.services.js" async></script>
 	</head>
 	<body class="" style="">
 		<div class="page_loader"></div>
@@ -64,9 +64,14 @@
                         <section class="section_type01 mb050">
                             <h2 class="h2_type09">Téléphone</h2>
                             <ul class="list_contact">
-                                <a href="tel:06.49.33.98.14" class="calltracker" data-aen="AEN831-1">
-                                    <li class="tel" style="margin-right:0;"><span>(+32) 04 93 71 95 97</span></li>
-                                </a>
+								<li>
+									<a href="tel:06.49.33.98.14" class="calltracker" data-aen="AEN831-1"></a>
+								</li>
+								<li class="tel" style="margin-right:0;">
+									<a href="tel:06.49.33.98.14" class="calltracker" data-aen="AEN831-1">
+										<span>(+32) 04 93 71 95 97</span>
+									</a>
+								</li>
                             </ul>
                         </section> <section class="section_type01 mb050">
                         <h2 class="h2_type09">Email</h2>
@@ -85,7 +90,7 @@
 			</div>
 		</footer>
 		<script type="text/javascript" src="./js/tarteaucitron.js" async></script>
-		<script type="text/javascript" async>
+		<script type="text/javascript">
 			    var tarteaucitronForceLanguage = 'fr';
 			    tarteaucitron.init({
 				        "privacyUrl": "", // Privacy policy url        "hashtag": "#tarteaucitron", // Open the panel with this hashtag        "cookieName": "tartaucitron", // Cookie name        "orientation": "bottom", // Banner position (top - bottom)        "showAlertSmall": false, // Show the small banner on bottom right        "cookieslist": true, // Show the cookie list        "adblocker": false, // Show a Warning if an adblocker is detected        "AcceptAllCta" : true, // Show the accept all button when highPrivacy on        "highPrivacy": false, // Disable auto consent        "handleBrowserDNTRequest": false, // If Do Not Track == 1, accept all        "removeCredit": true, // Remove credit link        "moreInfoLink": true, // Show more info link        "useExternalCss": false, // If false, the tarteaucitron.css file will be loaded        //"cookieDomain": ".my-multisite-domaine.fr" // Shared cookie for subdomain website        "readmoreLink": "/cookiespolicy", // Change the default readmore link pointing to opt-out.ferank.eu        "mandatory": false // Show a message about mandatory cookies        
