--- a/projets.html
+++ b/projets.html
@@ -23,8 +23,8 @@
 		<link rel="stylesheet" href="./css/validationEngine.jquery.css" type="text/css">
 		<link rel="stylesheet" href="./css/_nivo-lightbox.css" type="text/css">
 		<link rel="stylesheet" type="text/css" href="./css/tarteaucitron.css">
-		<script type="text/javascript" id="" async="" src="./js/tarteaucitron.fr.js"  async></script>
-        <script type="text/javascript" id="" async="" src="./js/tarteaucitron.services.js"  async></script>
+		<script type="text/javascript" src="./js/tarteaucitron.fr.js"  async></script>
+        <script type="text/javascript" src="./js/tarteaucitron.services.js"  async></script>
 	</head>
 	<body class="" style="">
 		<div class="page_loader"></div>
@@ -626,7 +626,7 @@
 			</div>
 		</footer>
 		<script type="text/javascript" src="./js/tarteaucitron.js"  async></script>
-		<script type="text/javascript"  async>
+		<script type="text/javascript">
 			    var tarteaucitronForceLanguage = 'fr';
 			    tarteaucitron.init({
 				        "privacyUrl": "", // Privacy policy url        "hashtag": "#tarteaucitron", // Open the panel with this hashtag        "cookieName": "tartaucitron", // Cookie name        "orientation": "bottom", // Banner position (top - bottom)        "showAlertSmall": false, // Show the small banner on bottom right        "cookieslist": true, // Show the cookie list        "adblocker": false, // Show a Warning if an adblocker is detected        "AcceptAllCta" : true, // Show the accept all button when highPrivacy on        "highPrivacy": false, // Disable auto consent        "handleBrowserDNTRequest": false, // If Do Not Track == 1, accept all        "removeCredit": true, // Remove credit link        "moreInfoLink": true, // Show more info link        "useExternalCss": false, // If false, the tarteaucitron.css file will be loaded        //"cookieDomain": ".my-multisite-domaine.fr" // Shared cookie for subdomain website        "readmoreLink": "/cookiespolicy", // Change the default readmore link pointing to opt-out.ferank.eu        "mandatory": false // Show a message about mandatory cookies        
@@ -647,7 +647,7 @@
 		<script type="text/javascript" src="./js/imagesloaded.pkgd.min.js" async></script>
 		<script type="text/javascript" src="./js/isotope.pkgd.min.js" async></script>
         <script type="text/javascript" src="./js/front-socle.js" async></script>
-		<script type="text/javascript" async>
+		<script type="text/javascript">
 			$(function()    {
 				    // Isotope    $('.projets_items').imagesLoaded(function ()        {
 					        var $grid = $('.projets_items').isotope(            {
