--- a/propos.html
+++ b/propos.html
@@ -98,29 +98,16 @@
 			</div>
 		</footer>
 		<script type="text/javascript" src="./js/tarteaucitron.js" async></script>
-		<script type="text/javascript">
-			    var tarteaucitronForceLanguage = 'fr';
-			    tarteaucitron.init({
-				        "privacyUrl": "", // Privacy policy url        "hashtag": "#tarteaucitron", // Open the panel with this hashtag        "cookieName": "tartaucitron", // Cookie name        "orientation": "bottom", // Banner position (top - bottom)        "showAlertSmall": false, // Show the small banner on bottom right        "cookieslist": true, // Show the cookie list        "adblocker": false, // Show a Warning if an adblocker is detected        "AcceptAllCta" : true, // Show the accept all button when highPrivacy on        "highPrivacy": false, // Disable auto consent        "handleBrowserDNTRequest": false, // If Do Not Track == 1, accept all        "removeCredit": true, // Remove credit link        "moreInfoLink": true, // Show more info link        "useExternalCss": false, // If false, the tarteaucitron.css file will be loaded        //"cookieDomain": ".my-multisite-domaine.fr" // Shared cookie for subdomain website        "readmoreLink": "/cookiespolicy", // Change the default readmore link pointing to opt-out.ferank.eu        "mandatory": false // Show a message about mandatory cookies        
-			});
-			    // Google Analytics (gtag.js)    tarteaucitron.user.gtagUa = 'UA-178023470-1';
-			;
-			;
-			    tarteaucitron.user.gtagMore = function () {
-			};
-			    (tarteaucitron.job = tarteaucitron.job || []).push('gtag');
-		</script>
-			<script type="text/javascript" src="./js/jquery.min.js" async></script>
-            <script type="text/javascript" src="./js/jquery-migrate.min.js" async></script>
-            <script type="text/javascript" src="./js/validationEngine.js" async></script>
-            <script type="text/javascript" src="./js/jquery.validationEngine-fr.js" async></script>
-            <script type="text/javascript" src="./js/jquery.cycle2.min.js" async></script>
-            <script type="text/javascript" src="./js/colibri-antispam.js" async></script>
-            <script type="text/javascript" src="./js/jquery.imagefit.js" async></script>
-            <script type="text/javascript" src="./js/nivo-lightbox.min-fr.js" async></script>
-            <script type="text/javascript" src="./js/imagesloaded.pkgd.min.js" async></script>
-            <script type="text/javascript" src="./js/isotope.pkgd.min.js" async></script>
-            <script type="text/javascript" src="./js/front-socle.js" async></script>
-		<script type="text/javascript"></script>
+		<script type="text/javascript" src="./js/jquery.min.js"></script>
+		<script type="text/javascript" src="./js/jquery-migrate.min.js" async></script>
+		<script type="text/javascript" src="./js/validationEngine.js" async></script>
+		<script type="text/javascript" src="./js/jquery.validationEngine-fr.js" async></script>
+		<script type="text/javascript" src="./js/jquery.cycle2.min.js"></script>
+		<script type="text/javascript" src="./js/colibri-antispam.js" async></script>
+		<script type="text/javascript" src="./js/jquery.imagefit.js" async></script>
+		<script type="text/javascript" src="./js/nivo-lightbox.min-fr.js" async></script>
+		<script type="text/javascript" src="./js/imagesloaded.pkgd.min.js" async></script>
+		<script type="text/javascript" src="./js/isotope.pkgd.min.js" async></script>
+		<script type="text/javascript" src="./js/front-socle.js" async></script>
 	</body>
 </html>
