Balise opengraph pour reseaux sociaux

--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
 		<meta name="robots" content="index, follow">
 		<meta name="city" content="Estaimpuis">
 		<meta name="country" content="Belgique">
+		<meta property="og:title" content="Philippe Vandenbrande | Menuisier & Charpentier"/>
+		<meta property="og:description" content="Philippe Vandenbrande, votre artisan Menuiserie et Charpentrie dans la province du hainault en Belgique. Un savoir-faire unique dans la région. Venez découvrir son travail !"/>
+		<meta property="og:image" content="https://raw.githubusercontent.com/arcas59/Philippe_Menuiserie/master/image/menuiserie11.jpg" />
+		<meta property="og:image:secure_url" content="https://raw.githubusercontent.com/arcas59/Philippe_Menuiserie/master/image/menuiserie11.jpg" />
+		<meta property="og:image:type" content="image/jpeg" />
+		<meta property="og:image:width" content="1200" />
+		<meta property="og:image:height" content="627" />
+		<meta property="og:image:alt" content="Menuiserie" />
 		<title>Accueil | Philippe Vandenbrande | Menuisier & Charpentier</title>
 		<!-- Favicons -->
 		<link rel="apple-touch-icon" sizes="180x180" href="./image/favicon/apple-touch-icon.png">
