Ajout de nouveaux chantiers

--- a/contact.html
+++ b/contact.html
@@ -85,7 +85,7 @@
 		<!-- footer -->
 		<footer>
 			<div class="copy">
-				Adrien Ribeiro | 2021 | Tous droits réservés.
+				<a class="copy" href="https://adrienribeiro.com/">Adrien Ribeiro | 2022 | Tous droits réservés.</a>
 			</div>
 		</footer>
 		<script type="text/javascript" src="./js/tarteaucitron.js" async></script>
