--- a/projets.html
+++ b/projets.html
@@ -56,8 +56,67 @@
 					<h1 class="colorh">Mes Réalisations</h1>
 					<div id="flex" class="projets_items grid">
 						<figure class="item">
+                            <img src="./image/projets/habill1/habillage.jpg">
+							<figcaption>
+								<p>
+									Habillage et aménagement d'un atelier de pâtisserie
+								</p>
+								<p>
+									2021
+								</p>
+								<p>
+									Estaimpuis
+                                </p>
+                                <a href="https://www.facebook.com/photo/?fbid=1671994653132470&set=pcb.1671994686465800"><span>Voir le projet</span></a>
+							</figcaption>
+						</figure>
+						<figure class="item">
+                            <img src="./image/projets/habill1/habillage2.jpg">
+							<figcaption>
+								<p>
+									Démolition d'un atelier pâtissier
+								</p>
+								<p>
+									2021
+								</p>
+								<p>
+									Estaimpuis
+                                </p>
+                                <a href="https://www.facebook.com/photo?fbid=1671988093133126&set=pcb.1671989739799628"><span>Voir le projet</span></a>
+							</figcaption>
+						</figure>
+						<figure class="item">
+                            <img src="./image/projets/habill1/habillage3.jpg">
+							<figcaption>
+								<p>
+									Démolition et Reconstruction d'une plate-forme
+								</p>
+								<p>
+									2021
+								</p>
+								<p>
+									Estaimpuis
+                                </p>
+                                <a href="https://www.facebook.com/photo?fbid=1671986729799929&set=pcb.1671987683133167"><span>Voir le projet</span></a>
+							</figcaption>
+						</figure>
+						<figure class="item">
+                            <img src="./image/projets/habill1/habillage4.jpg">
+							<figcaption>
+								<p>
+									Réalisation pour notre chantier du gitage
+								</p>
+								<p>
+									2021
+								</p>
+								<p>
+									Estaimpuis
+                                </p>
+                                <a href="https://www.facebook.com/manuvanneste/photos/pcb.1426737454366375/1426737411033046"><span>Voir le projet</span></a>
+							</figcaption>
+						</figure>
+						<figure class="item">
                             <img src="./image/projets/piscine/piscinea.jpg">
-
 							<figcaption>
 								<p>
 									Réalisation Térasse + Habillage piscine
@@ -621,7 +680,7 @@
 				<a href="./index.html/projets#" class="ontop"><img src="./image/chevron-up-solid.svg" alt="icone chevron"></a>
 			</div>
 			<div class="copy">
-				Adrien Ribeiro | 2021 | Tous droits réservés.
+				<a class="copy" href="https://adrienribeiro.com/">Adrien Ribeiro | 2022 | Tous droits réservés.</a>
 			</div>
 		</footer>
 		<script type="text/javascript" src="./js/tarteaucitron.js" async></script>
